--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Amit Sankhyan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav class="nav">
+    <div class="nav-name">
+      <a href="index.html">Amit Sankhyan</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="books.html">Books</a></li>
+      <li><a href="thoughts.html">Thoughts</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Author Bio -->
+  <section class="bio">
+    <img src="images/author.jpg" alt="Amit Sankhyan" class="author-img">
+
+    <p>
+      Amit Sankhyan is someone who observes people closely and believes that the quietest moments often carry the deepest truths.
+      With a background in training, communication, and understanding human behaviour, he values empathy, reflection, and honest connection.
+      His perspective is shaped by listening more than speaking, noticing emotions others may overlook, and finding meaning in everyday
+      experiences that leave a lasting impact.
+    </p>
+  </section>
+
+  <!-- Thought -->
+  <section class="thought">
+    <blockquote>
+      “The most important lessons are not taught loudly — they are felt quietly.”
+    </blockquote>
+  </section>
+
+  <!-- Books Preview -->
+  <section class="books-preview">
+    <h2>Books</h2>
+
+    <div class="book-grid">
+      <div class="book">
+        <img src="images/book1.jpg" alt="The Silence Before the Sound">
+        <h3>The Silence Before the Sound</h3>
+        <p>Corporate Learning</p>
+      </div>
+
+      <div class="book">
+        <img src="images/book2.jpg" alt="The Resonance of Transformation">
+        <h3>The Resonance of Transformation</h3>
+        <p>Corporate Learning</p>
+      </div>
+
+      <div class="book">
+        <img src="images/book3.jpg" alt="Breathed Once Belonged Once">
+        <h3>Breathed Once Belonged Once</h3>
+        <p>Love</p>
+      </div>
+    </div>
+  </section>
+
+</body>
+</html>
 
