--- a/books.html
+++ b/books.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Books | Amit Sankhyan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <nav class="nav">
+    <div class="nav-name">
+      <a href="index.html">Amit Sankhyan</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="books.html">Books</a></li>
+      <li><a href="thoughts.html">Thoughts</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section class="books-page">
+
+    <h2>Are You a Trainer? Series</h2>
+
+    <div class="book-detail">
+      <h3>Part 1 – The Silence Before the Sound</h3>
+      <p>
+        A reflection on the unseen moments before a trainer finds their voice.
+        This book explores corporate learning through awareness, patience,
+        and the inner journey that shapes impactful trainers.
+      </p>
+      <p><strong>Genre:</strong> Corporate Learning</p>
+      <p class="buy">Amazon · Google Books · Books2Read</p>
+    </div>
+
+    <div class="book-detail">
+      <h3>The Resonance of Transformation</h3>
+      <p>
+        A deeper exploration of growth, resistance, and change within learning environments,
+        where transformation is felt long before it is measured.
+      </p>
+      <p><strong>Genre:</strong> Corporate Learning</p>
+      <p class="buy">Amazon · Google Books · Books2Read</p>
+    </div>
+
+    <h2>Standalone</h2>
+
+    <div class="book-detail">
+      <h3>Breathed Once Belonged Once</h3>
+      <p>
+        “They were almost forever.”
+        A love story shaped by moments that were brief,
+        intense, and impossible to forget.
+      </p>
+      <p><strong>Genre:</strong> Love</p>
+      <p class="buy">Amazon · Google Books · Books2Read</p>
+    </div>
+
+  </section>
+
+</body>
+</html>
 
