--- a/thoughts.html
+++ b/thoughts.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Thoughts | Amit Sankhyan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <nav class="nav">
+    <div class="nav-name">
+      <a href="index.html">Amit Sankhyan</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="books.html">Books</a></li>
+      <li><a href="thoughts.html">Thoughts</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section class="thoughts-page">
+    <blockquote>“Some lessons arrive long after the moment has passed.”</blockquote>
+    <blockquote>“Not all growth is visible — some of it is felt.”</blockquote>
+    <blockquote>“We remember how people made us feel, not what they said.”</blockquote>
+  </section>
+
+</body>
+</html>
 
