--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact | Amit Sankhyan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <nav class="nav">
+    <div class="nav-name">
+      <a href="index.html">Amit Sankhyan</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="books.html">Books</a></li>
+      <li><a href="thoughts.html">Thoughts</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section class="contact-page">
+    <p>Email</p>
+    <p>Instagram</p>
+    <p>Amazon Author</p>
+  </section>
+
+</body>
+</html>
 
