--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <title>Contact | Amit Sankhyan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
+  <!-- Navigation -->
   <nav class="nav">
     <div class="nav-name">
       <a href="index.html">Amit Sankhyan</a>
@@ -19,12 +26,22 @@
     </ul>
   </nav>
 
-  <section class="contact-page">
-    <p>Email</p>
-    <p>Instagram</p>
-    <p>Amazon Author</p>
+  <!-- Contact Icons -->
+  <section class="contact-icons">
+
+    <a href="mailto:your@email.com" class="icon" aria-label="Email">
+      <i class="fa-solid fa-envelope"></i>
+    </a>
+
+    <a href="https://instagram.com/" target="_blank" class="icon" aria-label="Instagram">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+
+    <a href="https://amazon.in/" target="_blank" class="icon" aria-label="Amazon Author">
+      <i class="fa-brands fa-amazon"></i>
+    </a>
+
   </section>
 
 </body>
 </html>
-
