--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
   </nav>
 
   <!-- Contact Icons -->
-  <section class="contact-icons">
+<section class="contact-icons contact-page">
 
     <a href="mailto:your@email.com" class="icon" aria-label="Email">
       <i class="fa-solid fa-envelope"></i>
