--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Font Awesome Icons -->
+  <!-- Font Awesome -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -26,22 +26,16 @@
     </ul>
   </nav>
 
-  <!-- Contact Icons -->
-<section class="contact-icons contact-page">
+  <!-- Contact Section -->
+  <section class="contact-section">
 
-    <a href="mailto:your@email.com" class="icon" aria-label="Email">
-      <i class="fa-solid fa-envelope"></i>
-    </a>
+    <h2>Let’s Stay Connected</h2>
+    <p>
+      For conversations, collaborations, or quiet exchanges of thought,
+      you can reach out through any of the spaces below.
+    </p>
 
-    <a href="https://instagram.com/" target="_blank" class="icon" aria-label="Instagram">
-      <i class="fa-brands fa-instagram"></i>
-    </a>
+    <div class="contact-icons">
 
-    <a href="https://amazon.in/" target="_blank" class="icon" aria-label="Amazon Author">
-      <i class="fa-brands fa-amazon"></i>
-    </a>
-
-  </section>
-
-</body>
-</html>
+      <a href="mailto:your@email.com" aria-label="Email">
+        <i cla
