--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,7 @@
   <meta charset="UTF-8">
   <title>Contact | Amit Sankhyan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Font Awesome -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -37,5 +31,31 @@
 
     <div class="contact-icons">
 
+      <!-- Email -->
       <a href="mailto:your@email.com" aria-label="Email">
-        <i cla
+        <svg viewBox="0 0 24 24">
+          <path d="M2 4h20v16H2z" fill="none"/>
+          <path d="M22 4L12 13 2 4"/>
+        </svg>
+      </a>
+
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+        <svg viewBox="0 0 24 24">
+          <path d="M4 3a2 2 0 110 4 2 2 0 010-4zm0 6h4v12H4zM10 9h4v2c.6-1.1 2-2.3 4.3-2.3 4.6 0 5.7 3 5.7 7v5.3h-4v-4.7c0-2.3-.1-5.2-3.2-5.2s-3.7 2.4-3.7 5v5h-4z"/>
+        </svg>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+        <svg viewBox="0 0 24 24">
+          <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6.5-.9a1.1 1.1 0 11-2.2 0 1.1 1.1 0 012.2 0z"/>
+        </svg>
+      </a>
+
+    </div>
+
+  </section>
+
+</body>
+</html>
