--- a/contact.html
+++ b/contact.html
@@ -49,4 +49,10 @@
       </a>
 
       <!-- Instagram -->
-      <a href="https://www.instagram.com/" target="_blank" aria-label="Inst_
+<a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+  <svg viewBox="0 0 24 24" aria-hidden="true">
+    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+    <circle cx="12" cy="12" r="4"></circle>
+    <circle cx="17" cy="7" r="1.2"></circle>
+  </svg>
+</a>
