--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Author Bio -->
   <section class="bio">
-    <img src="images/author.jpg" alt="Amit Sankhyan" class="author-img">
+    <img src="author.jpg" alt="Amit Sankhyan" class="author-img">
 
     <p>
       Amit Sankhyan is someone who observes people closely and believes that the quietest moments often carry the deepest truths.
@@ -45,19 +45,19 @@
 
     <div class="book-grid">
       <div class="book">
-        <img src="images/book1.jpg" alt="The Silence Before the Sound">
+        <img src="book1.jpg" alt="The Silence Before the Sound">
         <h3>The Silence Before the Sound</h3>
         <p>Corporate Learning</p>
       </div>
 
       <div class="book">
-        <img src="images/book2.jpg" alt="The Resonance of Transformation">
+        <img src="book2.jpg" alt="The Resonance of Transformation">
         <h3>The Resonance of Transformation</h3>
         <p>Corporate Learning</p>
       </div>
 
       <div class="book">
-        <img src="images/book3.jpg" alt="Breathed Once Belonged Once">
+        <img src="book3.jpg" alt="Breathed Once Belonged Once">
         <h3>Breathed Once Belonged Once</h3>
         <p>Love</p>
       </div>
