--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@
         <img src="book1.jpg" alt="The Silence Before the Sound">
         <h3>The Silence Before the Sound</h3>
         <p>Corporate Learning</p>
+        <a href="books.html" class="read-more">Read more</a>
       </div>
 
       <div class="book">
         <img src="book2.jpg" alt="The Resonance of Transformation">
         <h3>The Resonance of Transformation</h3>
         <p>Corporate Learning</p>
+        <a href="books.html" class="read-more">Read more</a>
       </div>
 
       <div class="book">
         <img src="book3.jpg" alt="Breathed Once Belonged Once">
         <h3>Breathed Once Belonged Once</h3>
         <p>Love</p>
+        <a href="books.html" class="read-more">Read more</a>
       </div>
     </div>
   </section>
