--- a/contact.html
+++ b/contact.html
@@ -33,26 +33,33 @@
 
       <!-- Email -->
       <a href="mailto:your@email.com" aria-label="Email">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M2 5h20v14H2z"/>
-          <path d="M2 5l10 7 10-7"/>
+        <svg viewBox="0 0 24 24">
+          <path d="M3 5h18v14H3z"/>
+          <path d="M3 5l9 7 9-7"/>
         </svg>
       </a>
 
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
+        <svg viewBox="0 0 24 24">
           <path d="M4 3a2 2 0 110 4 2 2 0 010-4z"/>
           <path d="M3 8h4v13H3z"/>
-          <path d="M10 8h4v2c.6-1.2 2-2.4 4.3-2.4 4.6 0 5.7 3 5.7 7v6.4h-4v-5.7c0-2.3-.1-5.2-3.2-5.2s-3.7 2.4-3.7 5.1v5.8h-4z"/>
+          <path d="M10 8h4v2c.6-1.2 2.2-2.4 4.3-2.4 4.6 0 5.7 3 5.7 7v6.4h-4v-5.7c0-2.3-.1-5.2-3.2-5.2s-3.7 2.4-3.7 5.1v5.8h-4z"/>
         </svg>
       </a>
 
       <!-- Instagram -->
-<a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-  <svg viewBox="0 0 24 24" aria-hidden="true">
-    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-    <circle cx="12" cy="12" r="4"></circle>
-    <circle cx="17" cy="7" r="1.2"></circle>
-  </svg>
-</a>
+      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+        <svg viewBox="0 0 24 24">
+          <rect x="2" y="2" width="20" height="20" rx="5"/>
+          <circle cx="12" cy="12" r="4"/>
+          <circle cx="17" cy="7" r="1.2"/>
+        </svg>
+      </a>
+
+    </div>
+
+  </section>
+
+</body>
+</html>
