--- a/books.html
+++ b/books.html
@@ -41,7 +41,7 @@
 
       <!-- Book 1 -->
       <div class="books-ru-content active">
-        <img src="images/book1.jpg" alt="The Silence Before the Sound">
+        <img src="book1.jpg" alt="The Silence Before the Sound">
         <h2>The Silence Before the Sound</h2>
         <p>
           A reflection on the unseen moments before a trainer finds their voice.
@@ -57,7 +57,7 @@
 
       <!-- Book 2 -->
       <div class="books-ru-content">
-        <img src="images/book2.jpg" alt="The Resonance of Transformation">
+        <img src="book2.jpg" alt="The Resonance of Transformation">
         <h2>The Resonance of Transformation</h2>
         <p>
           A deeper exploration of growth, resistance, and change within learning environments,
@@ -72,7 +72,7 @@
 
       <!-- Book 3 -->
       <div class="books-ru-content">
-        <img src="images/book3.jpg" alt="Breathed Once Belonged Once">
+        <img src="book3.jpg" alt="Breathed Once Belonged Once">
         <h2>Breathed Once Belonged Once</h2>
         <p>
           “They were almost forever.”  
