--- a/books.html
+++ b/books.html
@@ -20,87 +20,62 @@
     </ul>
   </nav>
 
-  <!-- Books Section -->
-  <section class="books-ru">
+  <section class="books-list">
 
-    <!-- Left: Book Titles -->
-    <div class="books-ru-list">
-      <button class="books-ru-item active" onclick="showBook(0)">
-        The Silence Before the Sound
-      </button>
-      <button class="books-ru-item" onclick="showBook(1)">
-        The Resonance of Transformation
-      </button>
-      <button class="books-ru-item" onclick="showBook(2)">
-        Breathed Once Belonged Once
-      </button>
-    </div>
-
-    <!-- Right: Book Detail -->
-    <div class="books-ru-detail">
-
-      <!-- Book 1 -->
-      <div class="books-ru-content active">
-        <img src="book1.jpg" alt="The Silence Before the Sound">
+    <!-- Book 1 -->
+    <div class="book-card">
+      <img src="images/book1.jpg" alt="The Silence Before the Sound">
+      <div class="book-info">
         <h2>The Silence Before the Sound</h2>
         <p>
           A reflection on the unseen moments before a trainer finds their voice.
           This book explores corporate learning through awareness, patience,
           and the inner journey that shapes impactful trainers.
         </p>
-        <div class="books-ru-buy">
-          <a href="#">Amazon</a>
-          <a href="#">Google Books</a>
-          <a href="#">Books2Read</a>
+        <div class="buy-links">
+          <a href="#" class="buy">Amazon</a>
+          <a href="#" class="buy">Google Books</a>
+          <a href="#" class="buy">Books2Read</a>
         </div>
       </div>
+    </div>
 
-      <!-- Book 2 -->
-      <div class="books-ru-content">
-        <img src="book2.jpg" alt="The Resonance of Transformation">
+    <!-- Book 2 -->
+    <div class="book-card">
+      <img src="images/book2.jpg" alt="The Resonance of Transformation">
+      <div class="book-info">
         <h2>The Resonance of Transformation</h2>
         <p>
           A deeper exploration of growth, resistance, and change within learning environments,
           where transformation is felt long before it is measured.
         </p>
-        <div class="books-ru-buy">
-          <a href="#">Amazon</a>
-          <a href="#">Google Books</a>
-          <a href="#">Books2Read</a>
+        <div class="buy-links">
+          <a href="#" class="buy">Amazon</a>
+          <a href="#" class="buy">Google Books</a>
+          <a href="#" class="buy">Books2Read</a>
         </div>
       </div>
+    </div>
 
-      <!-- Book 3 -->
-      <div class="books-ru-content">
-        <img src="book3.jpg" alt="Breathed Once Belonged Once">
+    <!-- Book 3 -->
+    <div class="book-card">
+      <img src="images/book3.jpg" alt="Breathed Once Belonged Once">
+      <div class="book-info">
         <h2>Breathed Once Belonged Once</h2>
         <p>
           “They were almost forever.”  
-          A love story shaped by moments that were brief,
-          intense, and impossible to forget.
+          A love story shaped by moments that were brief, intense,
+          and impossible to forget.
         </p>
-        <div class="books-ru-buy">
-          <a href="#">Amazon</a>
-          <a href="#">Google Books</a>
-          <a href="#">Books2Read</a>
+        <div class="buy-links">
+          <a href="#" class="buy">Amazon</a>
+          <a href="#" class="buy">Google Books</a>
+          <a href="#" class="buy">Books2Read</a>
         </div>
       </div>
-
     </div>
 
   </section>
-
-<script>
-function showBook(index) {
-  const buttons = document.querySelectorAll('.books-ru-item');
-  const contents = document.querySelectorAll('.books-ru-content');
-
-  buttons.forEach((btn, i) => {
-    btn.classList.toggle('active', i === index);
-    contents[i].classList.toggle('active', i === index);
-  });
-}
-</script>
 
 </body>
 </html>
