--- a/books.html
+++ b/books.html
@@ -24,7 +24,7 @@
 
     <!-- Book 1 -->
     <div class="book-card">
-      <img src="images/book1.jpg" alt="The Silence Before the Sound">
+      <img src="book1.jpg" alt="The Silence Before the Sound">
       <div class="book-info">
         <h2>The Silence Before the Sound</h2>
         <p>
@@ -42,7 +42,7 @@
 
     <!-- Book 2 -->
     <div class="book-card">
-      <img src="images/book2.jpg" alt="The Resonance of Transformation">
+      <img src="book2.jpg" alt="The Resonance of Transformation">
       <div class="book-info">
         <h2>The Resonance of Transformation</h2>
         <p>
@@ -59,7 +59,7 @@
 
     <!-- Book 3 -->
     <div class="book-card">
-      <img src="images/book3.jpg" alt="Breathed Once Belonged Once">
+      <img src="book3.jpg" alt="Breathed Once Belonged Once">
       <div class="book-info">
         <h2>Breathed Once Belonged Once</h2>
         <p>
