--- a/books.html
+++ b/books.html
@@ -23,7 +23,7 @@
   <section class="books-list">
 
     <!-- Book 1 -->
-    <div class="book-card">
+    <div class="book-card" id="book1">
       <img src="book1.jpg" alt="The Silence Before the Sound">
       <div class="book-info">
         <h2>The Silence Before the Sound</h2>
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Book 2 -->
-    <div class="book-card">
+    <div class="book-card" id="book2">
       <img src="book2.jpg" alt="The Resonance of Transformation">
       <div class="book-info">
         <h2>The Resonance of Transformation</h2>
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Book 3 -->
-    <div class="book-card">
+    <div class="book-card" id="book3">
       <img src="book3.jpg" alt="Breathed Once Belonged Once">
       <div class="book-info">
         <h2>Breathed Once Belonged Once</h2>
