--- a/thoughts.html
+++ b/thoughts.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <!-- Navigation -->
   <nav class="nav">
     <div class="nav-name">
       <a href="index.html">Amit Sankhyan</a>
@@ -19,12 +20,59 @@
     </ul>
   </nav>
 
+  <!-- Thoughts Section -->
   <section class="thoughts-page">
-    <blockquote>“Some lessons arrive long after the moment has passed.”</blockquote>
-    <blockquote>“Not all growth is visible — some of it is felt.”</blockquote>
-    <blockquote>“We remember how people made us feel, not what they said.”</blockquote>
+
+    <!-- Featured Thought -->
+    <div class="featured-thought">
+      <blockquote>
+        Some lessons arrive loudly.  
+        The ones that change us forever  
+        usually arrive in silence.
+      </blockquote>
+    </div>
+
+    <!-- Thought Stream -->
+    <div class="thought-stream">
+
+      <div class="thought-card">
+        <blockquote>
+          Growth often feels like confusion  
+          before it feels like clarity.
+        </blockquote>
+      </div>
+
+      <div class="thought-card">
+        <blockquote>
+          Not everything that pauses your life  
+          is trying to stop it.
+        </blockquote>
+      </div>
+
+      <div class="thought-card">
+        <blockquote>
+          We don’t outgrow who we were —  
+          we learn how to carry them gently.
+        </blockquote>
+      </div>
+
+      <div class="thought-card">
+        <blockquote>
+          Listening is sometimes the most  
+          generous form of leadership.
+        </blockquote>
+      </div>
+
+      <div class="thought-card">
+        <blockquote>
+          Love doesn’t always stay.  
+          But it always teaches.
+        </blockquote>
+      </div>
+
+    </div>
+
   </section>
 
 </body>
 </html>
-
