--- a/books.html
+++ b/books.html
@@ -38,9 +38,10 @@
             and the inner journey that shapes impactful trainers.
           </p>
           <div class="buy-links">
-            <a href="#" class="buy">Amazon</a>
-            <a href="#" class="buy">Google Books</a>
-            <a href="#" class="buy">Books2Read</a>
+            <a href="https://www.amazon.in/dp/B0G7M33LFR?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Amazon</a>
+  <a href="https://play.google.com/store/books/details?id=6UmdEQAAQBAJ" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://books2read.com/u/47aJgR" class="buy" target="_blank" rel="noopener">Books2Read</a>
+
           </div>
         </div>
       </div>
@@ -60,9 +61,10 @@
             where transformation is felt long before it is measured.
           </p>
           <div class="buy-links">
-            <a href="#" class="buy">Amazon</a>
-            <a href="#" class="buy">Google Books</a>
-            <a href="#" class="buy">Books2Read</a>
+            <a href="https://www.amazon.in/dp/B0G9X7GXD1?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Amazon</a>
+  <a hrefhttps://play.google.com/store/books/details?id=FWmhEQAAQBAJ" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://books2read.com/u/b69Jz6" class="buy" target="_blank" rel="noopener">Books2Read</a>
+
           </div>
         </div>
       </div>
@@ -83,9 +85,10 @@
             intense, and impossible to forget.
           </p>
           <div class="buy-links">
-            <a href="#" class="buy">Amazon</a>
-            <a href="#" class="buy">Google Books</a>
-            <a href="#" class="buy">Books2Read</a>
+            <a href="https://www.amazon.in/dp/B0FBRVB61W?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Amazon</a>
+  <a hrefhttps://www.amazon.in/dp/B0FBRVB61W?ref_=quick_view_ref_tag" class="buy" target="_blank" rel="noopener">Google Books</a>
+  <a href="https://books2read.com/u/3GRQKQ" class="buy" target="_blank" rel="noopener">Books2Read</a>
+
           </div>
         </div>
       </div>
