--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <div class="contact-icons">
 
       <!-- Email (OUTLINE – FIXED) -->
-      <a href="mailto:your@email.com" aria-label="Email">
+      <a href="mailto:amitsankhyan13@gmail.com" aria-label="Email">
         <svg viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
@@ -45,7 +45,7 @@
       </a>
 
       <!-- LinkedIn (SOLID – CORRECT) -->
-      <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/amit-sankhyan-184a9b184/" target="_blank" aria-label="LinkedIn">
         <svg viewBox="0 0 24 24" fill="currentColor">
           <path d="M4 3a2 2 0 110 4 2 2 0 010-4z"/>
           <path d="M3 8h4v13H3z"/>
@@ -54,7 +54,7 @@
       </a>
 
       <!-- Instagram (OUTLINE – FIXED) -->
-      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/dark_soul_bookistaan" target="_blank" aria-label="Instagram">
         <svg viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
